Se creó con Colab

--- a/01_exploración.ipynb
+++ b/01_exploración.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1WtpPMxMKx9LCJLidCB6VbDlSNL36tDSk",
-      "authorship_tag": "ABX9TyP6fvLKuH+mnEm//+0y+poL",
+      "authorship_tag": "ABX9TyNJZuBuQiMAf+xBR72hQQlI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/ZamantaEst/Pruebas-Saber-Pro-Colombia-Kaggle/blob/main/01_exploraci%C3%B3n.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Entrega 1\n",
+        "\n",
+        "En este archivo exploraremos cómo cargar directamente los datos de una competencia en Kaggle, acceder a ellos y analizarlos para su uso futuro.\n"
+      ],
+      "metadata": {
+        "id": "7XM87mtknY9R"
+      }
     },
     {
       "cell_type": "code",
