Se creó con Colab

--- a/99_modelo_solución.ipynb
+++ b/99_modelo_solución.ipynb
@@ -58,7 +58,7 @@
         "id": "NDi4wOCbN6bv",
         "outputId": "2977bd6e-57a5-4781-d4dd-51ec621df9d4"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -286,7 +286,7 @@
       "metadata": {
         "id": "5JD-1k7VN_Pw"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "dfw9ziPlOTM0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
         "id": "U-Tvah8CZ0Vt",
         "outputId": "c1131c50-82df-4e14-d63e-eecca67a73a9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -786,7 +786,7 @@
         "id": "LcMd178OZ6tV",
         "outputId": "a750d28e-5edd-41ae-f994-222d7dc8b875"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1231,13 +1231,13 @@
         "train.info()"
       ],
       "metadata": {
+        "id": "K8G_M1g4Z-Gj",
+        "outputId": "6525b109-9c0b-4ca0-955c-f8c2e35eff3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "K8G_M1g4Z-Gj",
-        "outputId": "6525b109-9c0b-4ca0-955c-f8c2e35eff3d"
+        }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1283,14 +1283,14 @@
         "plt.show()"
       ],
       "metadata": {
+        "id": "AcwEiI4LaBxs",
+        "outputId": "d39e927a-6178-42e8-f3cb-7dca48b4fbb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        },
-        "id": "AcwEiI4LaBxs",
-        "outputId": "d39e927a-6178-42e8-f3cb-7dca48b4fbb8"
+        }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1310,14 +1310,14 @@
         "train['E_PRGM_ACADEMICO'].value_counts().head(20)"
       ],
       "metadata": {
+        "id": "NK8RuohCaEor",
+        "outputId": "91433b44-9a86-46ba-c435-8fc8e8392c07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 742
-        },
-        "id": "NK8RuohCaEor",
-        "outputId": "91433b44-9a86-46ba-c435-8fc8e8392c07"
+        }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1488,7 +1488,7 @@
       "metadata": {
         "id": "oK60dukPOZfK"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1533,7 +1533,7 @@
         "id": "zn3K7tfTO5FC",
         "outputId": "8c0a5470-1196-41f6-db63-43ac24435799"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1595,9 +1595,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MPkv9LyvR3R7",
-        "outputId": "4f1a04dc-ac7d-4e2a-8d53-2bcb26608c40"
+        "outputId": "4f1a04dc-ac7d-4e2a-8d53-2bcb26608c40",
+        "collapsed": true
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11680,7 +11681,7 @@
         "id": "OokkD7tTPP2b",
         "outputId": "de3b3926-edd7-4c41-a36e-a0f57a7f9ab2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11728,7 +11729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
